<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Pomodoro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pomo_running">PomoRunning</string>
    <string name="title_activity_finish_screen">Finish</string>
    <string name="title_activity_Preference">Preference</string>
    <string name="title_activity_break">Break Time</string>
    <string name="title_record">Record</string>
    <string name="title_today">Today</string>
    <string name="title_total">Total</string>
    <string name="start">Start!</string>
    <string name="stop">Stop</string>
    <string name="running_in_background">Running in background</string>
    <string name="do_you_wish_to_stop">Do you wish to stop?</string>
    <string name="stop_pomodoro">Stop Pomodoro?</string>

    <!-- Circle View -->
    <string name="time_up">Time\'s UP</string>
    <!-- CDService -->
    <string name="take_a_break">Take a break</string>
    <string name="cancel">Cancel</string>
    <string name="pomodoro_time_up">Pomodoro time\'s up</string>
    <string name="now_you_can_take_a_break">Now you can take a break</string>
	<string name="tap_to_break">Tap to break</string>
	
    <!-- BreakFinishService -->
    <string name="continue_pomodoro">Continue</string>
    <string name="break_time_up">Break time\'s up</string>
    <string name="now_you_can_continue_your_pomodoro">Now you can continue your pomodoro</string>
	<string name="tap_to_continue_your_pomodoro">Tap to continue your pomodoro</string>
	
    <!-- Preference -->
    <string name="pref_title_display">Display</string>
    <string name="pref_enable_fullscreen">Enable fullscreen</string>
    <string name="pref_lights_on">Lights on</string>
    <string name="pref_lights_on_summary">Prevent the screen from turning off when pomodoro is running</string>
    <string name="pref_theme">Theme</string>

    <string-array name="pref_theme_list">
        <item>Black</item>
        <item>White</item>
    </string-array>
    <string-array name="pref_theme_list_values">
        <item>black</item>
        <item>white</item>
    </string-array>

    <string name="pref_title_timer_settings">Timer</string>
    <string name="pref_break_duration">Break duration</string>

    <string-array name="pref_break_duration_list">
        <item>3 min</item>
        <item>5 min</item>
        <item>8 min</item>
    </string-array>
    <string-array name="pref_break_duration_values">
        <item>3</item>
        <item>5</item>
        <item>8</item>
    </string-array>

    <string name="pref_long_break_duration">Longer break duration(every 4 "pomodori")</string>
    <string-array name="pref_long_break_duration_list">
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
    </string-array>
    <string-array name="pref_long_break_duration_values">
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
    
    <string name="pref_title_timers_end_alert">Timer\'s end alert</string>
    <string name="pref_notification_sound">Notification sound</string>
    <string name="pref_enable_vibrations">Enable vibrations</string>
    <string name="pref_title_labs">Labs</string>
    <string name="pref_fast_mode">FAST MODE</string>
    <string name="pref_fast_mode_summary">Auto lock/unlock screen when pomodoro start/finish</string>
    <string name="pref_remove_manage">Remove administration manage</string>
    <string name="pref_remove_manage_summary">To uninstall the app, please FIRST click me!!</string>
    <string name="pref_title_sync">Sync</string>
    <string name="pref_sync_with_google_task">Sync with google task</string>
    <string name="pref_sync_with_google_task_summary">Not recommend!</string>
    <string name="pref_choose_account">Choose account</string>
    <string name="pref_title_info">Info</string>
    <string name="pref_email_us">Feedback</string>
    <string name="pref_about">About</string>
    <string name="pref_about_summary">"The application is based on the "Pomodoro Technique®", a way to get the most out of time management.</string>
    <string name="caidan">if you have finished 3 Pompdoros since 3 days ago, the AD will be dispeared</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="screen_locker_warnning">To uninstall the app, please FIRST click the "Remove administration manage" button</string>

    <!-- Google Task -->
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    <string name="title_activity_break_finish">BreakFinishActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>